// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkedList clear() should delete the entire list 1`] = `
LinkedList {
  "head": null,
  "length": 0,
}
`;

exports[`LinkedList remove() should remove the first element 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "Two",
  },
  "length": 3,
}
`;

exports[`LinkedList remove() should remove the second element 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "One",
  },
  "length": 3,
}
`;

exports[`LinkedList remove() should return the linked-list without the removed element when the first element was removed 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "Two",
  },
  "length": 3,
}
`;

exports[`LinkedList remove() should return the linked-list without the removed element when the second element was removed 1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": null,
        "value": "Four",
      },
      "value": "Three",
    },
    "value": "One",
  },
  "length": 3,
}
`;

exports[`LinkedList should allow initialization of a linked list by chaining append methods  1`] = `
LinkedList {
  "head": Node {
    "next": Node {
      "next": Node {
        "next": Node {
          "next": null,
          "value": "Four",
        },
        "value": "Three",
      },
      "value": "Two",
    },
    "value": "One",
  },
  "length": 4,
}
`;
